# python-projects

./: README.md  pyproject.toml
arithmetic_formatter/: formatter.py  test_formatter.py  tests.py
budget_app/: budget.py  test_budget.py  tests.py
polygon_area_calculator/: calculator.py  test_polygon_area_calc.py  tests.py
probability_calculator/: calculator.py  test_prob_calc.py  tests.py
time_calculator/: calculator.py  test_time_calc.py  tests.py
