[tool.poetry]
name = "python-projects"
version = "1.0.0"
description = "Python projects made for the freeCodeCamp Scientific Computing with Python Certification."
authors = ["mrarvind90 <arvindrankalidas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
coverage = {version = "^7.3.1", extras = ["toml"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
